--- a/estilo/css.css
+++ b/estilo/css.css
@@ -1,30 +1,158 @@
 *{
     padding: 0;
     margin: 0;
+    
 }
 
 header{
-    width: 100hv;
+    width: 1148px;
     height: 80px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 5px;
-    background-color: aqua;
+    background-color: #E5E5E5;
+    margin: 0 auto;
+    margin-bottom: 80px;
 }
-
-.content{
-    width: 1100px;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-.integrantes{
+header .logo{
     display: flex;
+    align-items: center;
+}
+header .links{
+    display: flex;
+    gap: 16px;
 }
 
-.integrantes img{
-    width: 200px;
-    height: 200px;
+
+section{
+    margin-bottom: 80px;
+}
+
+.section1{
+    display: flex;
+    width: 1148px;
+    margin: 0 auto 80px;
+    align-items: center;
+    gap: 50px;
+}
+
+.section1 .texto{
+    width: 390px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+.section1 .texto h1{
+    background: linear-gradient(180deg, #E21818 0%, #1367E5 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    line-height: 51px;
+    font-size: 42px;
+    font-weight: 800;
+    padding-bottom: 38px;
+}
+.section1 img{
+    height: 320px;
+}
+
+.section2{
+    width: 100%;
+    background-color: #E5E5E5;
+   
+}
+.section2 .conteudo{
+    width: 1148px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+.conteudo .texto{
+    padding-top: 40px;
+    font-size: 20px;
+    width: 350px;
+}
+.conteudo .texto h1{
+    font-size: 38px;
+    padding-bottom: 40px;
+}
+.conteudo img{
+    padding: 40px 0;
+}
+
+
+.section3{
+    width: 1000px;
+    text-align: center;
+    margin: 0 auto 150px;
+}
+.section3 h1{
+    font-size: 42px;
+}
+
+.section3 .integrantes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    padding-top: 40px;
+}
+.section3 .fotos{
+    width: 240px;
+    height: 240px;
+    border-radius: 100%;
+    background-color: #E21818;
+}
+
+.section4{
+    width: 1148px;
+    margin: 0 auto;
+}
+.section4 .content{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 100px;   
+}
+.section4 .texto{
+    width: 540px;
+    font-size: 20px;
+}
+.section4 .texto h1{
+    font-size: 42px;
+    padding-bottom: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.section4 .content:last-child{
+    flex-direction: row-reverse;
+    padding: 0;
+}
+footer{
+    margin-top: 200px;
+    width: 100%;
+    background-color: #E5E5E5;
+    padding: 80px 0 40px;
+}
+.footer{
+    display: flex;
+    justify-content: space-evenly;
+    width: 1148px;
+    margin: 0 auto;
+}
+.footer h1{
+    padding-bottom: 30px;
+}
+.footer .logo{
+    justify-content: center;
+}
+.footer .social{
+}
+.footer .social .icones{
+    display: flex;
+    flex-wrap: wrap;
+    width: 150px;
+    gap: 10px;
+}
+
+#autoral{
+    padding-top: 60px;
+    text-align: center;
 }
