--- a/estilo/css.css
+++ b/estilo/css.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin: 0;
-    
+    scroll-behavior: smooth;
 }
 
 header{
@@ -22,6 +22,15 @@ header .logo{
 header .links{
     display: flex;
     gap: 16px;
+}
+header .links a{
+    text-decoration: none;
+    color: black;
+    font-family: sans-serif ;
+}
+header .links a:hover{
+    color: #6e6e6e;
+    text-decoration: underline;
 }
 
 
@@ -100,7 +109,49 @@ section{
     width: 240px;
     height: 240px;
     border-radius: 100%;
-    background-color: #E21818;
+}
+.section3 img{
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    border: 5px solid black;
+}
+.section3 .info{
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    margin-top: -115%;
+    background-color: rgba(229, 229, 229, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: all .2s;
+    position: relative;
+    margin-left: 5px;
+    visibility: hidden;
+}
+
+.section3 img:hover ~ .info{
+    visibility: visible;
+    margin-top: -249px;
+}
+.section3 .info:hover{
+    visibility: visible;
+    margin-top: -249px;
+}
+.section3 .info h1{
+    text-align: center;
+    font-size: 18px;
+}
+.section3 .redes{
+    margin-top: 30px;
+    display: flex;
+    column-gap: 16px;
+    justify-content: center;
+}
+.section3 .redes img{
+    height: 40px;
+    width: 40px;
 }
 
 .section4{
@@ -133,15 +184,15 @@ footer{
 }
 .footer{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     width: 1148px;
     margin: 0 auto;
 }
 .footer h1{
     padding-bottom: 30px;
 }
-.footer .logo{
-    justify-content: center;
+.footer .logo p{
+    padding-top: 20px;
 }
 .footer .social{
 }
@@ -151,7 +202,22 @@ footer{
     width: 150px;
     gap: 10px;
 }
-
+.footer .contato{
+    line-height: 30px;
+}
+.footer .links .navegacao{
+    display: flex;
+    gap: 16px;
+}
+.footer .links a{
+    text-decoration: none;
+    color: black;
+    font-family: sans-serif ;
+}
+.footer .links a:hover{
+    color: #6e6e6e;
+    text-decoration: underline;
+}
 #autoral{
     padding-top: 60px;
     text-align: center;
