--- a/estilo/css.css
+++ b/estilo/css.css
@@ -97,61 +97,97 @@ section{
 .section3 h1{
     font-size: 42px;
 }
-
-.section3 .integrantes{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 40px;
-    padding-top: 40px;
-}
-.section3 .fotos{
-    width: 240px;
-    height: 240px;
-    border-radius: 100%;
-}
-.section3 img{
-    width: 100%;
-    height: 100%;
-    border-radius: 100%;
-    border: 5px solid black;
-}
-.section3 .info{
-    width: 100%;
-    height: 100%;
-    border-radius: 100%;
-    margin-top: -115%;
-    background-color: rgba(229, 229, 229, 0.8);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: all .2s;
+.section3 .container{
     position: relative;
-    margin-left: 5px;
-    visibility: hidden;
+    width: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+}
+.section3 .container .perfil{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    background: linear-gradient(#2196f3, #2196f3 30%, #1d3548 30%, #1d3548);
+    margin: 10px;
+    border-radius: 20px;
+    overflow: hidden;
+
+}
+.section3 .container .perfil .img{
+    transition: 0.5s;
+    transform-origin: top;/*deixando a origem da imagem no topo*/
+    overflow: hidden;/*impedindo que elementos excedentes apareçam*/
+}
+.section3 .container .perfil:hover .img{
+    transform: translateY(30px) scale(0.35);
+    border-radius: 20px;
+}
+.section3 .container .perfil .img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;    
 }
 
-.section3 img:hover ~ .info{
-    visibility: visible;
-    margin-top: -249px;
-}
-.section3 .info:hover{
-    visibility: visible;
-    margin-top: -249px;
-}
-.section3 .info h1{
-    text-align: center;
-    font-size: 18px;
-}
-.section3 .redes{
-    margin-top: 30px;
+.section3 .container .perfil .content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
-    column-gap: 16px;
     justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 25px;
+    transform: translateY(100%);
+    transition: .5s;
+    box-sizing: border-box;
+
 }
-.section3 .redes img{
-    height: 40px;
-    width: 40px;
+.section3 .container .perfil:hover .content{
+    transform: translateY(0);
+}
+.section3 .container .perfil .content .details{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.section3 .container .perfil .content .details h2{
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: 500;
+}
+.section3 .container .perfil .content .details h2 span{
+    color: #2196f3;
+    font-size: .8em;
+    font-weight: 400;
+}
+.section3 .social_icons{
+    display: flex;
+    margin-top: 5px;
+}
+.section3 .social_icons li{
+    list-style: none;
+    margin: 5px;
+}
+.section3 .social_icons li a{
+    width: 45px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #294d69;
+    border-radius: 50%;
+    font-size: 1.5em;
+    color: #fff;
+    text-decoration: none;
+    transition: .5s;
+}
+.section3 .social_icons li a:hover{
+    transform: rotate(360deg);
+    background: #2196f3;
 }
 
 .section4{
