--- a/estilo/css.css
+++ b/estilo/css.css
@@ -2,18 +2,29 @@
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
+    font-family: 'Bebas Neue', cursive;
+
+}
+p, a{
+    font-family: 'Exo 2', sans-serif; 
+}
+body{
+    background: #FEFFFF;
 }
 
 header{
+    background-color: #E5E5E5;
+    background: #F2F6F7;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 80px;
+}
+header .content{
     width: 1148px;
-    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 5px;
-    background-color: #E5E5E5;
     margin: 0 auto;
-    margin-bottom: 80px;
 }
 header .logo{
     display: flex;
@@ -26,7 +37,6 @@ header .links{
 header .links a{
     text-decoration: none;
     color: black;
-    font-family: sans-serif ;
 }
 header .links a:hover{
     color: #6e6e6e;
@@ -48,16 +58,14 @@ section{
 
 .section1 .texto{
     width: 390px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
 }
 .section1 .texto h1{
     background: linear-gradient(180deg, #E21818 0%, #1367E5 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    line-height: 51px;
-    font-size: 42px;
-    font-weight: 800;
+    line-height: 62px;
+    font-size: 60px;
     padding-bottom: 38px;
 }
 .section1 img{
@@ -66,8 +74,8 @@ section{
 
 .section2{
     width: 100%;
-    background-color: #E5E5E5;
-   
+    background: #F2F6F7;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .section2 .conteudo{
     width: 1148px;
@@ -75,16 +83,16 @@ section{
     margin: 0 auto;
     justify-content: space-between;
 }
-.conteudo .texto{
+.section2 .conteudo .texto{
     padding-top: 40px;
     font-size: 20px;
     width: 350px;
 }
-.conteudo .texto h1{
-    font-size: 38px;
+.section2 .conteudo .texto h1{
+    font-size: 40px;
     padding-bottom: 40px;
 }
-.conteudo img{
+.section2 .conteudo img{
     padding: 40px 0;
 }
 
@@ -95,7 +103,7 @@ section{
     margin: 0 auto 150px;
 }
 .section3 h1{
-    font-size: 42px;
+    font-size: 50px;
 }
 .section3 .container{
     position: relative;
@@ -156,13 +164,14 @@ section{
 }
 .section3 .container .perfil .content .details h2{
     color: #fff;
-    font-size: 1.2em;
+    font-size: 22px;
+    line-height: 22px;
     font-weight: 500;
 }
 .section3 .container .perfil .content .details h2 span{
     color: #2196f3;
-    font-size: .8em;
-    font-weight: 400;
+    font-size: 14px;
+    font-family: 'Exo 2', sans-serif;
 }
 .section3 .social_icons{
     display: flex;
@@ -199,14 +208,16 @@ section{
     justify-content: space-between;
     padding-bottom: 100px;   
 }
+.section4 img{
+    margin: auto 0;
+}
 .section4 .texto{
     width: 540px;
     font-size: 20px;
 }
 .section4 .texto h1{
-    font-size: 42px;
+    font-size: 60px;
     padding-bottom: 50px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .section4 .content:last-child{
     flex-direction: row-reverse;
@@ -215,7 +226,8 @@ section{
 footer{
     margin-top: 200px;
     width: 100%;
-    background-color: #E5E5E5;
+    background-color: #F2F6F7;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 80px 0 40px;
 }
 .footer{
@@ -229,14 +241,30 @@ footer{
 }
 .footer .logo p{
     padding-top: 20px;
-}
-.footer .social{
+    font-weight: bold;
 }
 .footer .social .icones{
     display: flex;
     flex-wrap: wrap;
-    width: 150px;
+    width: 110px;
     gap: 10px;
+}
+.footer .social .icones a{
+    width: 50px;
+    height: 50px;
+    background: #d6d8d9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    font-size: 25px;
+    transition: .5s;
+    text-decoration: none;
+    color: black
+}
+.footer .social .icones a:hover{
+    transform: rotate(360deg);
+    background: #919191;
 }
 .footer .contato{
     line-height: 30px;
@@ -248,7 +276,6 @@ footer{
 .footer .links a{
     text-decoration: none;
     color: black;
-    font-family: sans-serif ;
 }
 .footer .links a:hover{
     color: #6e6e6e;
