--- a/estilo/css.css
+++ b/estilo/css.css
@@ -10,15 +10,14 @@ p, a{
 }
 body{
     background: #FEFFFF;
+    overflow-x: hidden;
 }
 
 header{
-    background-color: #E5E5E5;
     background: #F2F6F7;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-bottom: 80px;
 }
-header .content{
+header .navegacao{
     width: 1148px;
     display: flex;
     justify-content: space-between;
@@ -29,16 +28,32 @@ header .content{
 header .logo{
     display: flex;
     align-items: center;
+    text-decoration: none;
+    color: #000;
 }
-header .links{
+header .menu-navegacao{
     display: flex;
     gap: 16px;
 }
-header .links a{
+header .hamburguer{
+    display: none;
+    cursor: pointer;
+}
+header .hamburguer .bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #000000;
+}
+header .menu-navegacao a{
     text-decoration: none;
     color: black;
+    transition: .5s;
 }
-header .links a:hover{
+header .menu-navegacao a:hover{
     color: #6e6e6e;
     text-decoration: underline;
 }
@@ -51,9 +66,9 @@ section{
 .section1{
     display: flex;
     width: 1148px;
-    margin: 0 auto 80px;
+    margin: 40px auto 80px;
     align-items: center;
-    gap: 50px;
+    justify-content: space-between;
 }
 
 .section1 .texto{
@@ -68,8 +83,12 @@ section{
     font-size: 60px;
     padding-bottom: 38px;
 }
+.section1 .imagens{
+    display: flex;
+    justify-content: space-evenly;
+}
 .section1 img{
-    height: 320px;
+    object-fit: contain;
 }
 
 .section2{
@@ -98,21 +117,19 @@ section{
 
 
 .section3{
-    width: 1000px;
-    text-align: center;
-    margin: 0 auto 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .section3 h1{
     font-size: 50px;
 }
 .section3 .container{
-    position: relative;
     width: 1000px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin: 0 auto;
 }
 .section3 .container .perfil{
     position: relative;
@@ -138,7 +155,6 @@ section{
     height: 100%;
     object-fit: cover;    
 }
-
 .section3 .container .perfil .content{
     position: absolute;
     top: 0;
@@ -198,6 +214,52 @@ section{
     transform: rotate(360deg);
     background: #2196f3;
 }
+.section3 .integrante{
+    display: flex;
+    justify-content: space-evenly;
+    width: 800px;
+    background: #F2F6F7;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin: 0 auto 100px;
+    border-radius: 16px;
+    padding: 10px 0;
+    display: none;
+}
+.section3 .integrante img{
+    width: 200px;
+}
+.section3 .integrante ul{
+    margin-top: 10px;
+    display: flex;
+}
+.section3 .integrante ul li{
+    list-style: none;
+    margin: 5px;
+}
+.section3 .integrante ul li a{
+    width: 45px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #294d69;
+    border-radius: 50%;
+    font-size: 1.5em;
+    color: #fff;
+    text-decoration: none;
+    transition: .5s;
+}
+.section3 .integrante ul li a:hover{
+    transform: rotate(360deg);
+    background: #2196f3;
+}
+.section3 .integrante .content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .section4{
     width: 1148px;
@@ -223,6 +285,7 @@ section{
     flex-direction: row-reverse;
     padding: 0;
 }
+
 footer{
     margin-top: 200px;
     width: 100%;
@@ -266,7 +329,7 @@ footer{
     transform: rotate(360deg);
     background: #919191;
 }
-.footer .contato{
+.footer .contato p{
     line-height: 30px;
 }
 .footer .links .navegacao{
@@ -284,4 +347,260 @@ footer{
 #autoral{
     padding-top: 60px;
     text-align: center;
+}
+#footer2{
+    display: none;
+}
+
+
+@media only screen and (max-width: 1200px){
+    header .navegacao{
+        width: 800px;
+    }
+    header .hamburguer{
+        display: block;
+    }
+    header .hamburguer.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    header .hamburguer.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    header .hamburguer.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    header .menu-navegacao{
+        display: flex;
+        position: absolute;
+        right: -100%;
+        top: 90px;
+        gap: 0px;
+        flex-direction: column;
+        background-color: #262626;
+        width: 100%;
+        text-align: center;
+        transition: 0.5s;
+    }
+    header .menu-navegacao.active{
+        display: flex;
+        right:0 ;
+    }
+    header .menu-navegacao .links{
+        height: 30px;
+        padding: 20px 0 10px;
+        color: white;
+        border-bottom: #1367E5 solid 1px;
+    }
+    header .menu-navegacao .links:last-child{
+        border: none;
+    }
+    /**/
+    .section1{
+        width: 800px;
+    }
+    .section1 .texto{
+        width: 320px;
+        font-size: 16px;
+    }
+    .section1 .texto h1{
+        font-size: 48px;
+    }
+    .section1 img{
+        width: 240px;
+    }
+    /**/
+    .section2 .conteudo{
+        width: 800px;
+    }
+    .section2 .conteudo .texto{
+        width: 240px;
+        font-size: 16px;
+    }
+    .section2 img{
+        width: 240px;
+        object-fit: contain;
+    }
+    /**/
+    .section3 .perfil{
+        display: none;
+    }
+    .section3 .integrante{
+        display: flex;
+    }
+    /**/
+    .section4{
+        width: 800px;
+    }
+    .section4 .content .texto{
+        width: 350px;
+        font-size: 14px;
+    }
+    .section4 .content .texto h1{
+        font-size: 48px;
+    }
+    .section4 .content:last-child img{
+        width: 400px;
+    }
+    /**/
+    #footer{
+        display: none;
+    }
+    #footer2{
+        display: flex;
+    }
+    #footer2 .footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    width: 80%;
+    }
+    #footer2 .footer .flex{
+        display: flex;
+        width: 450px;
+        justify-content: space-between;
+    }
+    #footer2 .footer .links{
+        width: 450px;
+    }
+    #footer2 #autoral{
+        width: 450px;
+    }
+    #footer2 .footer .logo{
+        margin-bottom: 50px;
+    }
+    #footer2 .footer .logo img{
+        width: 20vw;
+        margin: 0 auto;
+        display: block;
+    }
+    #footer2 .footer .logo p {
+        font-size: 22px;
+        text-align: center;
+    }
+    #footer2 .footer .logo .barra{
+        width: 70%;
+        height: 5px;
+        margin: 15px auto 0;
+        border-radius: 10px;
+        background-color: black;
+    }
+}
+
+@media only screen and (max-width: 900px){
+    header .navegacao{
+        width: 400px;
+    }
+    /*2*/
+    .section1{
+        width: 400px;
+        flex-direction: column;
+    }
+    .section1 img{
+        margin-top: 38px;
+        width: 160px;
+    }
+    /*3*/
+    .section2 .conteudo{
+        width: 400px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .section2 .texto h1{
+        font-size: 30px;
+    }
+    .section2 .conteudo .texto{
+        width: 360px;
+    }
+    .section2 img{
+        width: 280px;
+        object-fit: contain;
+    }
+    /**/
+    .section3 .integrante{
+        width: 80%;
+    }
+    .section3 .integrante img{
+        width: 25%;
+        object-fit: contain;
+    }
+    .section3 .integrante h2{
+        font-size: 22px;
+    }
+    /**/
+    .section4{
+        width: 400px;
+    }
+    .section4 .content{
+        flex-direction: column;
+        align-items: center;
+    }
+    .section4 .content:last-child{
+        flex-direction: column;
+    }
+    .section4 .content img{
+        width: 200px;
+        padding-bottom: 20px;
+    }
+    .section4 .content:last-child img{
+        width: 250px;
+    }
+}
+
+@media only screen and (max-width: 480px){
+    header .navegacao{
+        width: 310px;
+    }
+    /*2*/
+    .section1{
+        width: 310px;
+    }
+    .section1 .texto{
+        width: 310px;
+    }
+    /**/
+    .section2 .conteudo{
+        width: 310px;
+    }
+    .section2 .conteudo .texto{
+        width: 100%;
+    }
+    /**/
+    .section3 .integrante{
+        width: 90%;
+    }
+    /**/
+    .section4{
+        width: 310px;
+    }
+    .section4 .content, .section4 .content .texto{
+        width: 100%;
+    }
+    /**/
+    #footer2 .footer{
+        width: 310px;
+    }
+    #footer2 .footer .flex{
+        width: 310px;
+    }
+    #footer2 .footer .links{
+        width: 310px;
+    }
+    #footer2 #autoral{
+        width: 310px;
+    }
+    #footer2 .footer h1{
+        font-size: 22px;
+    }
+    #footer2 .footer{
+        font-size: 14px;
+    }
+    #footer2 .footer .contato p{
+        line-height: 22px;
+    }
+    #footer2 .footer .social .icones a {
+        width: 45px;
+        height: 45px;
+        font-size: 20px;
+    }
 }
